--- a/SuDoku/SuDokuMainForm.resx
+++ b/SuDoku/SuDokuMainForm.resx
@@ -117,4 +117,27 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAQAAAAAADoAgAAJgAAABAQEAAAAAAAKAEAAA4DAAAoAAAAIAAAAEAAAAABAAQAAAAAAIAC
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAMDAwACAgIAAAAD/AAD/
+        AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAA//////AAAAAAAAAAAAD//////////wAAAAAAAAAP///////////wAAAAAAAA
+        D////////////wAAAAAAAA/////////////wAAAAAAAP///wAAAP////8AAAAAAAD/8AAAAAAA////8A
+        AAAAAA8AAAAAAAAP////AAAAAAAAAAAAAAAAD////wAAAAAAAAAAAAAAAP////8AAAAAAAAAAAAA////
+        ////AAAAAAAAAAD//////////wAAAAAAAAD///////////AAAAAAAAAP//////////8AAAAAAAAA////
+        ///////wAAAAAAAAAP/////////wAAAAAAAAAA////////8AAAAAAAAAAAAP/////wAAAAAAAAAAAAAA
+        D////wAAAAAAAAAAAAAAAA////8AAAAAAADwAAAAAAAP////AAAAAAD/8AAAAAAAAP////8AAAD///AA
+        AAAAAAD////////////wAAAAAAAAD///////////8AAAAAAAAAD///////////AAAAAAAAAAD///////
+        //8AAAAAAAAAAAAA//////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////////
+        /////////8Af//wAA//4AAH/+AAA//gAAH/4H4B/+P/gP/v/4D///+A////AP//8AD//wAA//wAAf/4A
+        AP/8AAH//AAH//gAP//4A///+A////gP/3/4D/x//APwf/wAAH/+AAB//wAAf/+AAP//8Af/////////
+        //8oAAAAEAAAACAAAAABAAQAAAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAA
+        AACAAIAAgIAAAMDAwACAgIAAAAD/AAD/AAAA//8A/wAAAP8A/wD//wAA////AP8AAP//AAD/AAAAAA7g
+        AADgAAAA4AAAAO7gAADgAAAA4A4AAOAOAADu7/AA7u/wAO////AP///wwA/wDgAP8AzMwAAOAAAMzMzM
+        4A4AAMzEzMzg7gAAzEzEzO4OAADEzExE4A/wAMzEREQP///wREREREAP8AREREREREAEREREAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
