--- a/SuDoku/SuDokuMainForm.en.resx
+++ b/SuDoku/SuDokuMainForm.en.resx
@@ -117,35 +117,109 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MB_caption_err" xml:space="preserve">
-    <value>Error</value>
+  <data name="comboLanguage.Items" xml:space="preserve">
+    <value>Magyar</value>
   </data>
-  <data name="MB_caption_exit" xml:space="preserve">
-    <value>Exit</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
+    <value>119, 17</value>
   </data>
-  <data name="MB_caption_info" xml:space="preserve">
-    <value>Information</value>
+  <data name="label8.Text" xml:space="preserve">
+    <value>Choose language</value>
   </data>
-  <data name="MB_caption_result" xml:space="preserve">
-    <value>Result</value>
+  <data name="buttonCancel.Text" xml:space="preserve">
+    <value>Stop resolving</value>
   </data>
-  <data name="MB_msg_1result" xml:space="preserve">
-    <value>Egy megoldás van!</value>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="label5.AutoSize" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
-  <data name="MB_msg_MANYresult" xml:space="preserve">
-    <value>Több, legalább {0} megoldás is van!</value>
+  <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 17</value>
   </data>
-  <data name="MB_msg_NOresult" xml:space="preserve">
-    <value>A tábla nem oldható meg</value>
+  <data name="label5.Text" xml:space="preserve">
+    <value>Name of game</value>
   </data>
-  <data name="MB_msg_result" xml:space="preserve">
-    <value>A tábla megoldása\r\nBefejezem</value>
+  <data name="buttonResolveTable.Text" xml:space="preserve">
+    <value>Resolving</value>
   </data>
-  <data name="MB_msg_stop" xml:space="preserve">
-    <value>A művelet leállítva</value>
+  <data name="buttonCheckResolving.Text" xml:space="preserve">
+    <value>Test resolving</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="SuDoku" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SuDoku.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="buttonSaveGame.Text" xml:space="preserve">
+    <value>Save game</value>
+  </data>
+  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>107, 17</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>Game comment</value>
+  </data>
+  <data name="label3.AutoSize" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Name of game / Choosing game</value>
+  </data>
+  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Difficulty</value>
+  </data>
+  <data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>TopRight</value>
+  </data>
+  <data name="buttonSaveFile.Text" xml:space="preserve">
+    <value>Save games</value>
+  </data>
+  <data name="buttonClearGame.Text" xml:space="preserve">
+    <value>Clear table</value>
+  </data>
+  <data name="buttonTestGame.Text" xml:space="preserve">
+    <value>Testing game</value>
+  </data>
+  <data name="buttonLoadFile.Text" xml:space="preserve">
+    <value>Load game file</value>
+  </data>
+  <data name="buttonFillGame.Text" xml:space="preserve">
+    <value>Create game</value>
+  </data>
+  <data name="buttonStartGame.Text" xml:space="preserve">
+    <value>Start gaming</value>
+  </data>
+  <data name="buttonExit.Text" xml:space="preserve">
+    <value>Exit game</value>
+  </data>
+  <data name="label1.AutoSize" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>114, 64</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Game type</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAQAAAAAADoAgAAJgAAABAQEAAAAAAAKAEAAA4DAAAoAAAAIAAAAEAAAAABAAQAAAAAAIAC
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAMDAwACAgIAAAAD/AAD/
+        AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAA//////AAAAAAAAAAAAD//////////wAAAAAAAAAP///////////wAAAAAAAA
+        D////////////wAAAAAAAA/////////////wAAAAAAAP///wAAAP////8AAAAAAAD/8AAAAAAA////8A
+        AAAAAA8AAAAAAAAP////AAAAAAAAAAAAAAAAD////wAAAAAAAAAAAAAAAP////8AAAAAAAAAAAAA////
+        ////AAAAAAAAAAD//////////wAAAAAAAAD///////////AAAAAAAAAP//////////8AAAAAAAAA////
+        ///////wAAAAAAAAAP/////////wAAAAAAAAAA////////8AAAAAAAAAAAAP/////wAAAAAAAAAAAAAA
+        D////wAAAAAAAAAAAAAAAA////8AAAAAAADwAAAAAAAP////AAAAAAD/8AAAAAAAAP////8AAAD///AA
+        AAAAAAD////////////wAAAAAAAAD///////////8AAAAAAAAAD///////////AAAAAAAAAAD///////
+        //8AAAAAAAAAAAAA//////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////////
+        /////////8Af//wAA//4AAH/+AAA//gAAH/4H4B/+P/gP/v/4D///+A////AP//8AD//wAA//wAAf/4A
+        AP/8AAH//AAH//gAP//4A///+A////gP/3/4D/x//APwf/wAAH/+AAB//wAAf/+AAP//8Af/////////
+        //8oAAAAEAAAACAAAAABAAQAAAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAA
+        AACAAIAAgIAAAMDAwACAgIAAAAD/AAD/AAAA//8A/wAAAP8A/wD//wAA////AP8AAP//AAD/AAAAAA7g
+        AADgAAAA4AAAAO7gAADgAAAA4A4AAOAOAADu7/AA7u/wAO////AP///wwA/wDgAP8AzMwAAOAAAMzMzM
+        4A4AAMzEzMzg7gAAzEzEzO4OAADEzExE4A/wAMzEREQP///wREREREAP8AREREREREAEREREAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
   </data>
 </root>
