--- a/SuDoku/Resource.hu-HU.resx
+++ b/SuDoku/Resource.hu-HU.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MB_caption_err" xml:space="preserve">
-    <value>Error</value>
+    <value>Hiba</value>
   </data>
   <data name="MB_caption_exit" xml:space="preserve">
-    <value>Exit</value>
+    <value>Kilépés</value>
   </data>
   <data name="MB_caption_info" xml:space="preserve">
     <value>Információ</value>
@@ -140,9 +140,5 @@
   </data>
   <data name="MB_msg_result" xml:space="preserve">
     <value>A tábla megoldása\r\nBefejezem</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="SuDoku" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SuDoku.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
