--- a/SuDoku/Resource.en.resx
+++ b/SuDoku/Resource.en.resx
@@ -137,15 +137,31 @@
   </data>
   <data name="MB_msg_MANYresult" xml:space="preserve">
     <value>At least {0} result exists!</value>
+    <comment>{0} - a megoldások darabszáma</comment>
   </data>
   <data name="MB_msg_NOresult" xml:space="preserve">
-    <value>No sulution od this table</value>
+    <value>No sulution of this table</value>
   </data>
   <data name="MB_msg_result" xml:space="preserve">
-    <value>This is the solution
+    <value>Correct solution
 I will close the play</value>
   </data>
   <data name="MB_msg_stopped" xml:space="preserve">
     <value>Operation stopped</value>
+  </data>
+  <data name="MB_msg_ERRresult" xml:space="preserve">
+    <value>Defected solution!</value>
+  </data>
+  <data name="MB_msg_errtable" xml:space="preserve">
+    <value>Defected, unsolvable table
+Repare it!</value>
+  </data>
+  <data name="MB_msg_MISSname" xml:space="preserve">
+    <value>Game name is empty
+Fill it please!!</value>
+  </data>
+  <data name="MB_msg_OKresult" xml:space="preserve">
+    <value>Congratulation!
+Table is solved!</value>
   </data>
 </root>
